# Polymarket-Trading-Bot-V3

./: README.md
Python-Version/: .gitignore  BUILD.md  BUILD_SUMMARY.md  FIX_PYTHON.md  GIT_BASH_SETUP.md  INSTALL_PYTHON.md  Makefile  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  __main__.py  build.py  install_dependencies.sh  pyproject.toml  requirements.txt
Python-Version/src/: __init__.py  main.py
Python-Version/src/config/: copy_strategy.py  env.py
Python-Version/src/interfaces/: __init__.py  user.py
Python-Version/src/models/: __init__.py  user_history.py
Python-Version/src/services/: trade_executor.py  trade_monitor.py
Python-Version/src/utils/: create_clob_client.py  errors.py  fetch_data.py  get_my_balance.py  health_check.py  logger.py  post_order.py
Typescript-Version/: .env.example  REFACTORING_COMPLETION_GUIDE.md  REFACTORING_SUMMARY.md  docker-compose.yml  env.example  package.json  tsconfig.json
Typescript-Version/docs/: CODE_QUALITY_IMPROVEMENTS.md  DEPLOYMENT.md  DOCKER.md  GETTING_STARTED.md  MULTI_TRADER_GUIDE.md  QUICK_START.md  SIMULATION_QUICKSTART.md
Typescript-Version/src/: index.ts
Typescript-Version/src/application/services/: TradeExecutionService.ts
Typescript-Version/src/cli/commands/: aggregate-results.ts  audit-copy-trading-algorithm-fixed.ts  audit-copy-trading-algorithm.ts  check-allowance.ts  check-both-wallets.ts  check-my-stats.ts  check-pnl-discrepancy.ts  check-positions-detailed.ts  (+22 more)
Typescript-Version/src/core/: trade-executor.ts  trade-monitor.ts
Typescript-Version/src/utils/: errors.ts  postOrder.ts
(+7 files in other folders)
