[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copytrading-bot"
version = "1.0.0"
description = "Python version of Polymarket Copy Trading Bot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "ISC"}
authors = [
    {name = "Polymarket Trading Bot"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "web3>=6.15.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "typing-extensions>=4.9.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
polymarket-bot = "src.main:main"
